Fix Checkbox-Accordion Interference
- Fixed checkbox-accordion interference on the selection page
- Fixed jumbotron background image being cut off on smaller screens
- Adjusted clear button CSS to be a little wider

--- a/src/css/inputmain.css
+++ b/src/css/inputmain.css
@@ -370,7 +370,7 @@ COMPUTER SCREEN
     image-resolution: from-image;
     background-position: 65vw;
     padding-top: 5vh;
-    width: 85vw;
+    width: 100%;
     height: 100%;
     min-height: 20vh;
   }
@@ -397,7 +397,7 @@ COMPUTER SCREEN
   .clear {
     background-color: #0B5A4E;
     color: white;
-    max-width: 4vw;
+    max-width: 6vw;
     border-radius: 5px;
   }
 
